--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ invoke = "^2.0.0"
 pygame = "^2.3.0"
 
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^2.17.2"
+autopep8 = "^2.0.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
