--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,13 @@ packages = [{include = "ot_harjoitustyo"}]
 python = "^3.8"
 invoke = "^2.0.0"
 pygame = "^2.3.0"
+pytest = "^7.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.2"
 autopep8 = "^2.0.2"
+coverage = "^7.2.3"
 
 [build-system]
 requires = ["poetry-core"]
